# ContractsManagement

./: README.md
ContractManagement/: CMakeLists.txt  main.cpp
ContractManagement/Console/: ui.cpp  ui.h
ContractManagement/Contract/: contract.cpp  contract.h
ContractManagement/Controller/: GUI.cpp  GUI.h  crudGUI.h  model.h  readonlyGUI.h
ContractManagement/Data/: discipline.txt
ContractManagement/Domain/: disciplina.cpp  disciplina.h
ContractManagement/Exceptions/: errors.cpp  errors.h
ContractManagement/Repository/: repository.cpp  repository.h
ContractManagement/Service/: service.cpp  service.h
ContractManagement/Template/: vector.h
ContractManagement/Tests/: test.csv  test.html  tests.cpp  tests.h
ContractManagement/Utils/: observer.h  undo.h
ContractManagement/Validators/: validator.cpp  validator.h
